[gd_scene load_steps=25 format=2]

[ext_resource path="res://Tuto/imgtuto/breve.png" type="Texture" id=1]
[ext_resource path="res://Tuto/imgtuto/Controles.png" type="Texture" id=2]
[ext_resource path="res://Tuto/imgtuto/exemplo.png" type="Texture" id=3]
[ext_resource path="res://Tuto/Vida.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tuto/Conta.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tuto/Erro.tscn" type="PackedScene" id=6]
[ext_resource path="res://font/SPACE.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Tuto/Tutorial.gd" type="Script" id=8]
[ext_resource path="res://cenas/estre.tscn" type="PackedScene" id=9]
[ext_resource path="res://Tuto/Pontos.tscn" type="PackedScene" id=10]
[ext_resource path="res://Tuto/AsteTuto2.tscn" type="PackedScene" id=11]
[ext_resource path="res://Tuto/imgtuto/t4.png" type="Texture" id=12]
[ext_resource path="res://Tuto/AsteTuto.tscn" type="PackedScene" id=13]
[ext_resource path="res://Tuto/imgtuto/t6.png" type="Texture" id=14]
[ext_resource path="res://Tuto/imgtuto/t7.png" type="Texture" id=15]
[ext_resource path="res://Tuto/imgtuto/t5.png" type="Texture" id=16]
[ext_resource path="res://som/errar.wav" type="AudioStream" id=17]
[ext_resource path="res://Tuto/imgtuto/t8.png" type="Texture" id=18]
[ext_resource path="res://Tuto/imgtuto/t9.png" type="Texture" id=19]
[ext_resource path="res://som/destro_1.wav" type="AudioStream" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "explica",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "controle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "exemplo",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[node name="Tutorial" type="Node2D" groups=[
"Tutor",
]]
script = ExtResource( 8 )

[node name="Vida" parent="." instance=ExtResource( 4 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 984.0
margin_top = 8.0
margin_right = 992.0
margin_bottom = 31.0

[node name="Conta" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Pontos" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Tutoimgs" type="AnimatedSprite" parent="."]
position = Vector2( 484.47, 303.882 )
frames = SubResource( 1 )
animation = "explica"

[node name="Button" type="Button" parent="."]
margin_left = 875.0
margin_top = 560.0
margin_right = 1024.0
margin_bottom = 589.0
custom_fonts/font = SubResource( 2 )
text = "Continuar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 447.413
margin_top = 376.749
margin_right = 555.413
margin_bottom = 405.749
custom_fonts/font = SubResource( 3 )
text = "Jogar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" parent="." instance=ExtResource( 9 )]
position = Vector2( 500, 300 )

[node name="t4" type="Sprite" parent="."]
visible = false
position = Vector2( 222.108, 19.9297 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="t5" type="Sprite" parent="."]
visible = false
position = Vector2( 510.033, 92.5001 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="t6" type="Sprite" parent="."]
visible = false
position = Vector2( 793.888, 22.7942 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 14 )

[node name="t7" type="Sprite" parent="."]
visible = false
position = Vector2( 550, 300 )
scale = Vector2( 0.7, 0.7 )
z_index = 1
texture = ExtResource( 15 )

[node name="t8" type="Sprite" parent="."]
visible = false
position = Vector2( 502.003, 74.1717 )
texture = ExtResource( 18 )

[node name="t9" type="Sprite" parent="."]
visible = false
position = Vector2( 524.033, 351.552 )
texture = ExtResource( 19 )

[node name="AsteTuto" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 431.063, 165.426 )

[node name="AsteTuto2" parent="." instance=ExtResource( 11 )]
visible = false
position = Vector2( 583.514, 159.388 )

[node name="Erro" parent="." instance=ExtResource( 6 )]
margin_left = 318.648
margin_top = 507.837
margin_right = 481.648
margin_bottom = 547.837

[node name="Errar" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="TimerErro" type="Timer" parent="."]
wait_time = 8.0

[node name="botao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="colidir" type="Label" parent="."]
margin_left = 262.094
margin_top = 340.925
margin_right = 317.094
margin_bottom = 363.925
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timeColidir" type="Timer" parent="."]
wait_time = 8.0
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="TimerErro" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="timeColidir" to="." method="_on_timeColidir_timeout"]
